# fastapi_fargate

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/: .env  main.py
backend/api/app/routers/: default.py
backend/api/core/: config.py
